--- a/src/views/Login/style.scss
+++ b/src/views/Login/style.scss
@@ -3,4 +3,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
+    &__box {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+    }
 }
