--- a/src/components/LoggedInUser/style.scss
+++ b/src/components/LoggedInUser/style.scss
@@ -1,4 +1,20 @@
 .logged-in-user-container {
-    float: right;
+    display: flex;
+    align-content: right;
+    align-items: center;
     position: relative;
+    padding: 30px;
+    .logout-button {
+        border: none;
+        outline: none;
+        background-color: white;
+        padding: 5px;
+        color: #B73225;
+        font-weight: bold;
+        font-size: 16px;
+        cursor: pointer;
+    }
+    .logout-button:hover {
+        color: #591c0b;
+    }
 }
