--- a/src/components/Navbar/style.scss
+++ b/src/components/Navbar/style.scss
@@ -1,13 +1,19 @@
 #nav {
+    width: 100%;
     padding: 30px;
     display: flex;
-    justify-content: center;
+    justify-content: left;
+    align-items: center;
     a {
       font-weight: bold;
-      color: #2c3e50;
+      color: #B73225;
+      padding: 10px;
   
       &.router-link-exact-active {
-        color: #42b983;
+        color: #5C5F58;
       }
+    }
+    a:hover {
+      color: #591c0b;
     }
   }
