--- a/src/views/Login/style.scss
+++ b/src/views/Login/style.scss
@@ -1,4 +1,5 @@
 .login-container {
+    // background-color: blueviolet;
     display: flex;
     flex-direction: column;
     justify-content: center;
