--- a/src/views/Login/style.scss
+++ b/src/views/Login/style.scss
@@ -1,6 +1,5 @@
 .login-container {
     display: grid;
-    // background-color:lightcoral ;
     grid-template-columns: 1fr;
     padding: 10px;
     margin-top: 2%;
@@ -9,10 +8,12 @@
     align-items: center;
     height: 88.3vh;
     &__box {
-        background-color: white;
+        // background-color: red;
+        // border: 1px solid #5C5F58 ;
+        box-shadow: 6px 6px 6px 6px #5C5F58;
         display: grid;
-        padding: 10px;
-        height: 50%;
+        padding: 30px;
+        height: 70%;
         justify-self: center;
         align-items: center;
         justify-items: center;
