--- a/src/components/Form/Select/style.styl
+++ b/src/components/Form/Select/style.styl
@@ -4,14 +4,16 @@
   position relative
   display inline-block
   width 100%
+  border-radius(4px)
   background-color $white
-  box-shadow(0px 2px 6px rgba(0, 0, 0, 0.25))
   border 1px solid #b4bad2
   .g-form-select__text
     width 100%
     display flex
     .g-form-select--input
+      height 42px
       background-color $white
+      border-radius(4px)
       padding 16px
       font-size 16px
       border none
