--- a/src/components/Word/style.scss
+++ b/src/components/Word/style.scss
@@ -1,15 +1,15 @@
 .word-container {
     width: 60%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
     justify-content: center;
-    align-items: center;
     margin-top: 50px;
     margin-bottom: 20px;
     .g-form-field {
-        width: 100%;
+        width: 90%;
     }
     .text-container {
+        margin-top: 2%;
         .g-form-field__content {
             display: flex;
             align-items: center;
@@ -18,8 +18,12 @@
                 width: 100%;
             }
             button {
+                background-color: #004e7c;
                 margin: 0;
-                width: 40px;
+                width: 70px;
+                outline: none;
+                margin-left: 2%;
+                border: none;
             }
         }
     }
