--- a/src/views/AddWord/style.scss
+++ b/src/views/AddWord/style.scss
@@ -3,7 +3,13 @@
     flex-direction: column;
     align-items: center;
     button {
-        width: 30em;
-        margin-top: 20px;
+        width: 20%;
+        margin-bottom: 2%;
+        background-color: #004e7c;
+        outline: none;
+        border: none;
+        cursor: pointer;
+        font-size: 15px;
+        padding: 10px;
     }
 }
