--- a/src/components/Form/Input/style.styl
+++ b/src/components/Form/Input/style.styl
@@ -4,7 +4,7 @@
   position relative
   flexbox(row, flex-start, center)
   border-radius(4px)
-  border 1px solid $basicFour
+  border 1px solid #5c5f58
   background $white
   overflow hidden
   height 42px
