--- a/src/components/Form/Select/style.styl
+++ b/src/components/Form/Select/style.styl
@@ -6,7 +6,7 @@
   width 100%
   border-radius(4px)
   background-color $white
-  border 1px solid #b4bad2
+  border 1px solid #5c5f58
   .g-form-select__text
     width 100%
     display flex
@@ -33,17 +33,19 @@
       padding-top 10px
   .dropdown-options
     position absolute
-    background-color #f9f9f9
+    background-color #dce1e3
     min-width 160px
-    box-shadow 0px 8px 16px 0px rgba(0,0,0,0.2)
     z-index 1
     width 100%
     .dropdown-options__item
+      background-color #dce1e3
+      border 1px solid #5c5f58
       color $darker
-      padding 12px 16px
+      padding 10px 
       text-decoration none
       display block
       &:hover
-        background $nBasicFive
+        background #b73225
+        color white
 
 
