edit group improved

--- a/src/views/WordList/style.scss
+++ b/src/views/WordList/style.scss
@@ -16,10 +16,10 @@
         margin-left: 10%;
       }
   }
-  #table tr:nth-child(odd) {
+  #table-words tr:nth-child(odd) {
     background-color: #eee;
   }
-  #table th {
+  #table-words th {
     background-color: #5c5f58;
     color: white;
   }
