--- a/src/components/Group/style.scss
+++ b/src/components/Group/style.scss
@@ -20,6 +20,7 @@
             button {
                 margin: 0;
                 width: 40px;
+                background-color: red;
             }
         }
     }
