--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -8,13 +8,14 @@
     align-items: center;
     height: 88.3vh;
     &__box {
-        box-shadow: 6px 6px 6px 6px #5C5F58;
         display: grid;
+        border: 1px solid #a8b7bd;
         padding: 30px;
-        height: 70%;
+        height:70%;
         justify-self: center;
         align-items: center;
         justify-items: center;
+        width: 40%;
         &__item {
             width: 100%;
         }
@@ -26,14 +27,18 @@
         }
         input {
             padding: 10px;
-            background-color: #f0f3f4;
+            background-color: #e2e7e9;
             border-color: #DCE1E3;
             width: 100%;
+            border-radius: 30px;
+            border: none;
         }
         .login {
             display: flex;
-            justify-content: flex-end;
+            justify-content:center;
             width: 100%;
+            border-radius: 30px;
+            border: none;
         }
         button {
             background-color: #004E7C;
@@ -42,7 +47,8 @@
             outline: none;
             cursor: pointer;
             color: white;
-            width: 80px;
+            width: 200px;
+            border-radius: 30px;
         }
     }
 }
