--- a/src/views/PracticeGroup/PracticeGroup.scss
+++ b/src/views/PracticeGroup/PracticeGroup.scss
@@ -1,5 +1,5 @@
 .container {
-    background-color: red;
+    // background-color: red;
     display: grid;
     width: 100%;
     height: 100%;
@@ -11,9 +11,10 @@
 
 }
 .router {
-    background-color: #ffd700;
+    // background-color: #ffd700;
     width: 70%;
     border: 1px solid gray;
+    border-radius: 10px;
     padding: 10px;
     align-self: center;
     text-decoration: none;
