change input component

--- a/src/components/Form/Select/style.scss
+++ b/src/components/Form/Select/style.scss
@@ -1,4 +1,4 @@
-@import '../../assets/style/required.scss';
+@import '../../../assets/style/required.scss';
 
 .g-form-select {
 	position: relative;
