--- a/src/views/GroupList/GroupList.scss
+++ b/src/views/GroupList/GroupList.scss
@@ -15,6 +15,10 @@
           cursor: pointer;
           margin-left: 10%;
         }
+        button{
+          margin-left: 10%;
+
+        }
     }
     #table-groups tr:nth-child(odd) {
       background-color: #eee;
