--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -50,5 +50,8 @@
             width: 200px;
             border-radius: 30px;
         }
+        .error {
+            color: red;
+        }
     }
 }
